--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.0",
     "gulp-es6-transpiler": "^1.0.1",
+    "gulp-rimraf": "^0.1.1",
     "gulp-server-livereload": "^1.4.0",
     "react": "^0.13.3"
   }
