--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-babel": "^5.2.0",
-    "gulp-es6-transpiler": "^1.0.1",
     "gulp-jshint": "^1.11.2",
     "gulp-rimraf": "^0.1.1",
     "gulp-server-livereload": "^1.4.0",
-    "jshint-jsx": "^0.4.1",
-    "react": "^0.13.3"
+    "jshint-jsx": "^0.4.1"
   }
 }
